// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical should place Canonical container (landscape video) on page 1`] = `
.c0 {
  height: 100%;
  width: 100%;
}

<div
  className="c0"
  id="p01k6msm"
/>
`;

exports[`Canonical should place Canonical container (portrait video) on page 1`] = `
.c0 {
  padding-bottom: 178.78%;
  position: relative;
}

.c1 {
  height: 100%;
  width: 100%;
  position: absolute;
}

<div
  className="c0"
>
  <div
    className="c1"
    id="p01k6msm"
  />
</div>
`;
